--- a/templates/quiz-me.html
+++ b/templates/quiz-me.html
@@ -23,7 +23,7 @@
             const topic = document.getElementById('quizTopic').value;
             document.getElementById('loading-icon').classList.remove('hidden');
 
-            fetch('http://127.0.0.1:5000/quiz', { // Change this URL to your deployed backend endpoint if not running locally
+            fetch('https://quizzed-on-anything-90fedb3112ed.herokuapp.com', { // Change this URL to your deployed backend endpoint if not running locally
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
