--- a/templates/quiz-me.html
+++ b/templates/quiz-me.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="refresh" content="10" > -->
     <title>Quiz-Me</title>
     <link rel="stylesheet" href="/static/css/quiz-me.css">
 </head>
@@ -21,10 +20,9 @@
     <script>
         function getQuiz() {
             const topic = document.getElementById('quizTopic').value;
-            console.log(topic);
             document.getElementById('loading-icon').classList.remove('hidden');
 
-            fetch('https://quizzed-on-anything-90fedb3112ed.herokuapp.com', { // Change this URL to your deployed backend endpoint if not running locally
+            fetch('https://quizzed-on-anything-90fedb3112ed.herokuapp.com/quiz', { // Change this URL to your deployed backend endpoint if not running locally
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
