--- a/templates/quiz-me.html
+++ b/templates/quiz-me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz-Me</title>
+    <title>quizzed-on-anything</title>
     <link rel="stylesheet" href="/static/css/quiz-me.css">
 </head>
 <body>
