--- a/templates/quiz-me.html
+++ b/templates/quiz-me.html
@@ -9,7 +9,8 @@
 <body>
 
     <div class="container">
-        <h2 class="text-box-title">What do you want to be quizzed on?</h2>
+        <h2 class="text-box-title">Quizzed On Anything!</h2>
+        <p class="description">Hello and welcome to Quizzed On Anything. This is an interactive website where given a topic, it uses chatgpt 3.5 turbo API to gather information about the topic and return a multiple choice quiz. You can be quizzed on anything! give it a try. Just type any topic that you would like to be quizzed on in the text box below and click Get Quiz. Your score will be displayed after you have completed your quiz.</p>
         <input class="text-box" type="text" id="quizTopic" placeholder="Enter a topic...">
         <button class="get-quiz-button" onclick="getQuiz()">Get Quiz</button>
         <div id="loading-icon" class="hidden"></div>
